Add Generate mpack ext + some updates

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@ By Ivo Krugers</td></tr>
 <tr><td>SimplePad demo</td><td>17.5</td><td>Demo how to create a pad.
 
 by Ivo Krugers</td></tr>
-<tr><td>VSM: One Click To Open File</td><td>17.5</td><td>This extension opens a file with only one click on the solutiontree.
+<tr><td>VSM: Get Git Repo URL of selected lines</td><td>17.5</td><td>This extension copies the URL of the selected lines in the connected Git Repo to the clipboard. GITHUB and Azure DevOps are supported.
+
+by Ivo Krugers</td></tr>
+<tr><td>Xablu UXDD integration</td><td>17.5</td><td>Xablu UXDD Azure DevOps and Figma integration.</td></tr>
+<tr><td>VSM: One Click To Open File</td><td>17.5.1</td><td>This extension opens a file with only one click on the solutiontree.
 
 by Ivo Krugers
 
 </td></tr>
-<tr><td>VSM: Get Git Repo URL of selected lines</td><td>17.5</td><td>This extension copies the URL of the selected lines in the connected Git Repo to the clipboard. GITHUB and Azure DevOps are supported.
+<tr><td>VSM: Generate .mpack</td><td>17.5</td><td>This extension adds a item to the tools menu to generate a .mpack file from a release build.
 
-by Ivo Krugers</td></tr>
+By Ivo Krugers</td></tr>
 </table>
 </body></html>
